; ModuleID = '/home/carl/AnghaBench/kphp-kdb/util/extr_replicator.c_get_orig_file_size.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/util/extr_replicator.c_get_orig_file_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kfs_file_info = type { i32, i64 }
%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.kfs_file_info*)* @get_orig_file_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_orig_file_size(%struct.kfs_file_info* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.kfs_file_info*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store %struct.kfs_file_info* %0, %struct.kfs_file_info** %3, align 8
  %5 = load %struct.kfs_file_info*, %struct.kfs_file_info** %3, align 8
  %6 = getelementptr inbounds %struct.kfs_file_info, %struct.kfs_file_info* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = and i32 %7, 16
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %1
  %11 = load %struct.kfs_file_info*, %struct.kfs_file_info** %3, align 8
  %12 = call %struct.TYPE_3__* @load_binlog_zip_header(%struct.kfs_file_info* %11)
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %4, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = icmp ne %struct.TYPE_3__* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %10
  store i64 -1, i64* %2, align 8
  br label %24

16:                                               ; preds = %10
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  store i64 %19, i64* %2, align 8
  br label %24

20:                                               ; preds = %1
  %21 = load %struct.kfs_file_info*, %struct.kfs_file_info** %3, align 8
  %22 = getelementptr inbounds %struct.kfs_file_info, %struct.kfs_file_info* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  store i64 %23, i64* %2, align 8
  br label %24

24:                                               ; preds = %20, %16, %15
  %25 = load i64, i64* %2, align 8
  ret i64 %25
}

declare dso_local %struct.TYPE_3__* @load_binlog_zip_header(%struct.kfs_file_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
